WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59464
Fix more strict OwnPtr in WebCore (round N).
https://bugs.webkit.org/show_bug.cgi?id=59464
Summary
Fix more strict OwnPtr in WebCore (round N).
David Levin
Reported
2011-04-26 09:22:56 PDT
Fix more strict OwnPtr in WebCore (round N).
Attachments
Patch
(4.44 KB, patch)
2011-04-26 09:23 PDT
,
David Levin
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Levin
Comment 1
2011-04-26 09:23:26 PDT
Created
attachment 91117
[details]
Patch
Darin Adler
Comment 2
2011-04-26 09:48:52 PDT
Comment on
attachment 91117
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=91117&action=review
> Source/WebCore/fileapi/FileReader.cpp:171 > - m_loader = 0; > + m_loader.clear();
Anders Carlsson would much prefer that we use "= nullptr" rather than "clear()".
> Source/WebCore/loader/DocumentThreadableLoader.cpp:334 > - m_actualRequest = 0; // Prevent didFinishLoading() from bypassing access check. > + m_actualRequest.clear(); // Prevent didFinishLoading() from bypassing access check.
Ditto.
David Levin
Comment 3
2011-04-26 10:17:13 PDT
Committed as
http://trac.webkit.org/changeset/84923
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug