Fix more strict OwnPtr in WebCore (round N). https://bugs.webkit.org/show_bug.cgi?id=59464

Reviewed by Darin Adler.

* dom/Document.cpp:
(WebCore::Document::Document):
(WebCore::Document::attach):
* fileapi/FileReader.cpp:
(WebCore::FileReader::terminate):
* loader/DocumentThreadableLoader.cpp:
(WebCore::DocumentThreadableLoader::preflightFailure):
* workers/DefaultSharedWorkerRepository.cpp:
(WebCore::SharedWorkerConnectTask::create):
(WebCore::SharedWorkerScriptLoader::load):

Canonical link: https://commits.webkit.org/74645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84923 268f45cc-cd09-0410-ab3c-d52691b4dbfc